<resources>
    <string name="app_name">Best Seller</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="ciudad">Ciudad</string>
    <string name="contrasena">Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="_0_00">$0.000</string>
    <string name="categoria">Categoria</string>
    <string name="product">Product</string>
    <string name="camara" />
    <string name="oferta">Nombre oferta</string>
    <string name="desc_oferta">Descripción de la oferta</string>
    <string name="ubicacion">ubicacion</string>
    <string name="ver_ubicacion">Ver ubicación</string>
    <string name="foro_ofertas">Foro de ofertas</string>
    <string name="comunidad">Comunidad</string>
    <string name="buscar">buscar</string>
    <string name="inicio">inicio</string>
    <string name="escanear">Escanear</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="Categorias">Categorias</string>
    <string name="Productos">Productos</string>
    <string name="hola_camila_buen_dia">Hola Camila, Buen dia!</string>
    <string name="inicio_usuario">Inicio</string>
    <string name="publicaciones_del_d_a">🔥 Publicaciones del día</string>
    <string name="categorias_de_productos">🛍️ Categorias de productos</string>
    <string name="perfil_del_usuario">Perfil del usuario</string>
    <string name="informaci_n">Información</string>
    <string name="elige_una_categoria">☑️ Elige una categoria</string>
    <string name="usuarios">Usuarios</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="ajustes">Ajustes</string>
    <string name="laura_p_rez_sarmiento">Laura Pérez Sarmiento</string>
    <string name="cantidad_de_publicaciones_14">Cantidad de publicaciones: 14</string>
    <string name="aprobaciones_8">Aprobaciones: 8</string>

    <string-array name="ciudades_array">
        <item>Selecciona tu ciudad</item>
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
    </string-array>

    <string-array name="orden_az_array">
        <item>A - Z</item>
        <item>Z - A</item>
    </string-array>

    <string-array name="orden_precio_array">
        <item>Menor a Mayor</item>
        <item>Mayor a Menor</item>
    </string-array>

</resources>