<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicio"
        android:enabled="true"
        android:title="@string/inicio"
        android:icon="@drawable/ic_inicio" />

    <item
        android:id="@+id/buscar"
        android:enabled="true"
        android:title="@string/buscar"
        android:icon="@drawable/ic_lupa" />

    <item
        android:id="@+id/camara"
        android:enabled="true"
        android:title="@string/escanear"
        android:icon="@drawable/ic_camara"/>

    <item
        android:id="@+id/ubicacion"
        android:enabled="true"
        android:title="@string/ubicacion"
        android:icon="@drawable/ic_ubicacion" />

    <item
        android:id="@+id/oferta"
        android:enabled="true"
        android:title="@string/oferta"
        android:icon="@drawable/ic_ofertas" />
</menu>