<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Encabezado -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnRegresar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/perfil" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/inicio_usuario"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/hola_camila_buen_dia"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="76dp"
            android:layout_height="59dp"
            android:layout_marginEnd="28dp"
            android:background="@android:color/transparent"
            android:contentDescription="Add"
            android:src="@drawable/ic_notificacion"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="41dp" />
    </LinearLayout>

    <!-- Título -->



    <TextView
        android:id="@+id/txtPublicaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/publicaciones_del_d_a"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>

    <!-- RecyclerView horizontal -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOfertas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/txtPublicaciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"/>

    <!-- RecyclerView horizontal de Categorías -->

    <TextView
        android:id="@+id/txtCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="288dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/categorias_de_productos"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCategorias" />

</androidx.constraintlayout.widget.ConstraintLayout>