<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad_IniciarSesion" >

    <!-- Logo Best Seller -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuarioEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        style="@style/TextInputStyle"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UsuarioEditarTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_persona"
            android:textCursorDrawable="@null"
            android:drawablePadding="8dp"
            android:background="@drawable/fondo1"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contrasenaEntrada"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        style="@style/TextInputStyle"
        app:layout_constraintTop_toBottomOf="@id/usuarioEntrada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        android:layout_marginTop="-18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasenaEditarTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_contrasena"
            android:drawablePadding="8dp"
            android:textCursorDrawable="@null"
            android:background="@drawable/fondo1"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón iniciar sesion -->
    <Button
        android:id="@+id/iniciarSesionButton"
        style="@style/BtnRed"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/contrasenaEntrada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>